<resources>
    <string name="app_name">Smartball Hackathon</string>

    <string name="INTENT_SELECTED_SENSOR">SelectBall.SelectedSensor</string>
    <string name="KICK_DATA">KICK_DATA_PARCELABLE</string>

    <string name="info_activity_name">Name</string>
    <string name="info_activity_firmware">Firmware</string>
    <string name="info_activity_batterylevel">Battery level</string>
    <string name="info_activity_bntkick">Kick</string>
    <string name="info_activity_bntjuggle">Juggle Game</string>
    <string name="info_activity_bnt_record_juggle">Record Juggle</string>
    <string name="download_progress">%1$d %%</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Settings</string>
    <string name="action_new">Settings</string>
    <string name="logo_desc">App logo</string>
    <string name="player_name">Kate Jennifer</string>
    <string name="provide_player_name">Player Name</string>
    <string name="player_score">52 </string>
    <string name="error_with_type">error: %1$s</string>
    <string name="error_gatt_service_not_available">gatt service not available</string>
    <string name="error_device_disconnected">device disconnected</string>
    <string name="error_bluetooth_off">bluetooth is turned off</string>
    <string name="error_gatt_connect_failed">gatt connection failed. Try connecting again.</string>
    <string name="sampling_rate">Sampling rate</string>
    <string name="being_charged">Being charged</string>
    <string name="on_charger">On charger</string>
    <string name="charging_stopped">Charging stopped</string>
    <string name="position_the_ball">Position the ball</string>
    <string name="start_juggling">Start Juggling</string>
    <string name="stop_juggling">Stop Juggling</string>
    <string name="ready_to_kick">Ready to kick</string>
    <string name="kick_detected">Kick detected</string>
    <string name="download_data">Download data</string>
    <string name="data_downloaded">Data downloaded</string>
    <string name="display_data">Display data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="plot_x_axis_label">Time [ms]</string>
    <string name="plot_y_axis_label">Acceleration</string>
</resources>
