<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".BallInfoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_activity_name"
        android:id="@+id/main_namelabel"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_activity_name"
        android:id="@+id/main_name"
        android:textSize="@dimen/textsize_important"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_activity_firmware"
        android:id="@+id/main_firmwarelabel"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_activity_firmware"
        android:id="@+id/main_firmware"
        android:textSize="@dimen/textsize_important"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_activity_batterylevel"
        android:id="@+id/main_batterylabel"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_activity_batterylevel"
        android:id="@+id/main_battery"
        android:textSize="@dimen/textsize_important"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sampling_rate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_sample_rate"
        android:textSize="@dimen/textsize_important"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/being_charged"
        android:id="@+id/main_chargingStatusLabel"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_isBeingCharged"
        android:textSize="@dimen/textsize_important"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on_charger" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_isOnCharger"
        android:textSize="@dimen/textsize_important"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/charging_stopped" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_hasChargingStopped"
        android:textSize="@dimen/textsize_important"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_activity_bntkick"
        android:onClick="btnKickClick"
        android:id="@+id/btn_kick"
        android:enabled="false"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_activity_bntjuggle"
        android:onClick="btnJuggleClick"
        android:layout_gravity="center"
        android:id="@+id/btn_juggle"
        android:enabled="false"
        />
</LinearLayout>
</ScrollView>