<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.adidas.sb.hackathon.KickActivity"
    android:orientation="vertical">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/position_the_ball"
            android:clickable="true"
            android:layout_gravity="center"
            android:id="@+id/btn_position_the_ball"
            android:onClick="clickPositionTheBall"
            />

        <CheckBox
            style="@style/CustomCheckboxStyle"
            android:layout_width="wrap_content"
            android:text="@string/ready_to_kick"
            android:clickable="false"
            android:checked="false"
            android:enabled="false"
            android:id="@+id/chbox_readyToKick"/>

        <CheckBox
            style="@style/CustomCheckboxStyle"
            android:layout_width="wrap_content"
            android:text="@string/kick_detected"
            android:clickable="false"
            android:checked="false"
            android:enabled="false"
            android:id="@+id/chbox_kickDetected"/>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/download_data"
            android:layout_gravity="center"
            android:enabled="false"
            android:onClick="btnDownloadClick"
            android:id="@+id/btn_data_downloading"/>

        <TextView
            style="@style/CustomCheckboxStyle"
            android:layout_width="wrap_content"
            android:clickable="false"
            android:id="@+id/txt_downloadPercentage"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="2dp"
            android:layout_gravity="center"
            android:gravity="center"
            />

        <CheckBox
            style="@style/CustomCheckboxStyle"
            android:layout_width="wrap_content"
            android:text="@string/data_downloaded"
            android:clickable="false"
            android:layout_marginRight="5dp"
            android:enabled="false"
            android:checked="false"
            android:id="@+id/chbox_dataDownloaded"/>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/display_data"
            android:layout_gravity="center"
            android:enabled="false"
            android:onClick="btnDisplayDataClick"
            android:id="@+id/btn_display_data"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_connectivity_status"
            android:layout_gravity="center_horizontal"

            />
    </LinearLayout>

</LinearLayout>
