<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.adidas.sb.hackathon.JuggleActivity"
    android:orientation="vertical">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" >

        <EditText
            android:id="@+id/player_name_provided"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/provide_player_name"
            android:inputType="text" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_juggling"
            android:clickable="true"
            android:layout_gravity="center"
            android:id="@+id/btn_position_the_ball"
            android:onClick="clickStartJuggling"
            />

        <CheckBox
            style="@style/CustomCheckboxStyle"
            android:layout_width="wrap_content"
            android:text="@string/ready_to_kick"
            android:clickable="false"
            android:checked="false"
            android:enabled="false"
            android:id="@+id/chbox_readyToKick"/>

        <TextView
            style="@style/CustomCheckboxStyle"
            android:layout_width="wrap_content"
            android:clickable="false"
            android:id="@+id/txt_juggle_count"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="2dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="150sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_juggling"
            android:clickable="true"
            android:layout_gravity="center"
            android:id="@+id/btn_stop_juggling"
            android:onClick="clickStopJuggling"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_connectivity_status"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</LinearLayout>
